# ShitVO

./: CMakeLists.txt  README.md
cmake_modules/: FindEigen.cmake  FindOpenCV.cmake
config/: default.yaml
core/: CMakeLists.txt  common.h
core/camera/: camera.cpp  camera.h
core/config_parse/: config_parser.cpp  config_parser.h
core/front_track/: front_tracker.cpp  front_tracker.h
core/odometry/: homo_vo.cpp  homo_vo.h
core/util/: logging.h  util.cpp  util.h
demo/: demo_homo_vo.cpp
pc/: CMakeLists.txt
pc/dataset_parse/: dataset_parser.cpp  dataset_parser.h
pc/simulate/: simulator.cpp  simulator.h
pc/visualize/: visualizer.cpp  visualizer.h
